--- a/ansible/roles/swarm-consul/tasks/main.yaml
+++ b/ansible/roles/swarm-consul/tasks/main.yaml
@@ -3,7 +3,7 @@
 #    with_items: groups['swarm-master']
   - name: set fact consul_network
     set_fact: consul_network="{{ hostvars[item]['ansible_eth0']['ipv4']['address'] }}"
-    with_items: groups['swarm-master']
+    with_items: "{{groups['swarm-master']}}"
   - name: run consul
     docker: 
       name: consul
